# ChangeLog for www-apps/egroupware
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/egroupware/ChangeLog,v 1.26 2005/07/10 20:14:08 rl03 Exp $

  10 Jul 2005; Renat Lumpau <rl03@gentoo.org> -egroupware-1.0.0.007.ebuild:
  Removed old versions

  10 Jul 2005; Danny van Dyk <kugelfang@gentoo.org>
  egroupware-1.0.0.008.ebuild:
  Stable on amd64 wrt BUG #97651.

*egroupware-1.0.0.008 (10 Jul 2005)

  10 Jul 2005; Renat Lumpau <rl03@gentoo.org>
  -files/egroupware-1.0.0.007-xmlrpc.patch, -egroupware-1.0.0.007-r1.ebuild,
  +egroupware-1.0.0.008.ebuild:
  Version bump wrt security bug 97651. Remove unnecessary 007-r1.

  08 Jul 2005; Bryan Østergaard <kloeri@gentoo.org>
  egroupware-1.0.0.007-r1.ebuild:
  Stable on alpha, bug 97651.

  06 Jul 2005; Michael Hanselmann <hansmi@gentoo.org>
  egroupware-1.0.0.007-r1.ebuild:
  Stable on ppc.

*egroupware-1.0.0.007-r1 (06 Jul 2005)

  06 Jul 2005; Stuart Herbert <stuart@gentoo.org>
  +files/egroupware-1.0.0.007-xmlrpc.patch, +egroupware-1.0.0.007-r1.ebuild:
  Patch for security bug #97651

  24 Apr 2005; Martin Holzer <mholzer@gentoo.org>
  egroupware-1.0.0.007.ebuild:
  x86 stable

  22 Apr 2005; Bryan Østergaard <kloeri@gentoo.org>
  egroupware-1.0.0.007.ebuild:
  Stable on alpha, bug 89517.

  20 Apr 2005; Marcus D. Hanwell <cryos@gentoo.org>
  egroupware-1.0.0.007.ebuild:
  Stable on amd64, bug 89517.

  20 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  egroupware-1.0.0.007.ebuild:
  Stable on ppc.

*egroupware-1.0.0.007 (20 Apr 2005)

  20 Apr 2005; Aaron Walker <ka0ttic@gentoo.org>
  +egroupware-1.0.0.007.ebuild:
  Version bump for security bug 89517.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  08 Dec 2004; Karol Wojtaszek <sekretarz@gentoo.org>
  egroupware-1.0.00.006.ebuild:
  Stable on amd64, bug #70515

  05 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
  egroupware-1.0.00.006.ebuild: