@@ -1,0 +1,1 @@
+MD5 30984ed46fa064632a3f3a1137786cbd eGroupWare-1.0.0.008-2.tar.bz2 11081064
