@@ -3,7 +3,7 @@ You are almost done!
 
 1. Restart your webserver and your database daemon.
 
-2. Point your browser to the URL http://<your_server_address>/egroupware/setup
+2. Point your browser to the URL http://${VHOST_HOSTNAME}/egroupware/setup
 and follow the install script.
 
 Don't forget to read the installation manual, available from 
