@@ -1,6 +1,12 @@
 # ChangeLog for www-apps/egroupware
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/egroupware/ChangeLog,v 1.26 2005/07/10 20:14:08 rl03 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/egroupware/ChangeLog,v 1.27 2005/07/17 23:44:49 rl03 Exp $
+
+*egroupware-1.0.0.008_p2 (17 Jul 2005)
+
+  17 Jul 2005; Renat Lumpau <rl03@gentoo.org> files/postinstall-en.txt,
+  +egroupware-1.0.0.008_p2.ebuild:
+  Version bump
 
   10 Jul 2005; Renat Lumpau <rl03@gentoo.org> -egroupware-1.0.0.007.ebuild:
   Removed old versions
